# DiligenceDesk

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
eval/: evaluate.py  scenarios.json
outputs/: README.md  acme-ai-health_20260702_233705.md  globex-cloud-systems_20260702_233705.md  initech-erp-services_20260702_233705.md  nosignal-consulting_20260702_233705.md  pwc-etic-pricewaterhousecoopers_20260702_235931.md  pwc-etic_20260702_231915.md  trace_acme-ai-health_20260702_233705.json  trace_globex-cloud-systems_20260702_233705.json  trace_initech-erp-services_20260702_233705.json  trace_nosignal-consulting_20260702_233705.json  trace_pwc-etic-pricewaterhousecoopers_20260702_235931.json  trace_pwc-etic-pricewaterhousecoopers_20260703_001103.json  trace_pwc-etic_20260702_231915.json
src/diligencedesk/: __init__.py  agents.py  config.py  graph.py  llm.py  retrieval.py  schemas.py  search.py  state.py  stub_llm.py  supervisor.py
src/diligencedesk/tools/: __init__.py  local_tools.py  provider.py  stub_tools.py
tests/: conftest.py  test_async_graph.py  test_config.py  test_jobs.py  test_provider.py  test_retrieval.py  test_schemas.py  test_search.py  test_supervisor_stub.py  test_technical_signals.py
